--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <div class="logo-container">
-                    <img src="https://via.placeholder.com/50x50" alt="Hotel Logo" class="logo">
+                    <img src="images/HMS LOGO TRANSPARENT.png" alt="Hotel Logo" class="logo">
                     <h2>Hotel Admin</h2>
                 </div>
                 <button class="close-sidebar" id="close-sidebar">
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#guests">
+                    <a href="guest.html">
                         <i class="fas fa-users"></i>
                         <span>Guest Management</span>
                     </a>
