--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <img src="https://via.placeholder.com/80x80" alt="Hotel Logo" class="auth-logo">
+                <img src="images/HMS LOGO TRANSPARENT.png" alt="Hotel Logo" class="auth-logo">
                 <h2>Create Your Account</h2>
                 <p>Join our hotel management system</p>
             </div>
