--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <img src="https://via.placeholder.com/80x80" alt="Hotel Logo" class="auth-logo">
+                <img src="images/HMS LOGO TRANSPARENT.png" alt="Hotel Logo" class="auth-logo">
                 <h2>Hotel Admin Portal</h2>
                 <p>Sign in to access your dashboard</p>
             </div>
