--- a/rooms.html
+++ b/rooms.html
@@ -121,7 +121,7 @@
             </nav>
 
                 <div class="container">
-                    <main class="main-content">
+                    <main class="main-contents">
                         <!-- Room Management Content -->
                         <div class="content-area" id="rooms">
                             <div class="page-header">
