--- a/rooms.html
+++ b/rooms.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#staff">
+                    <a href="staff.html">
                         <i class="fas fa-user-tie"></i>
                         <span>Staff Management</span>
                     </a>
