started the booking management

--- a/guest.html
+++ b/guest.html
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#bookings">
+                    <a href="booking.html">
                         <i class="fas fa-calendar-check"></i>
                         <span>Booking Management</span>
                     </a>
