--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#bookings">
+                    <a href="booking.html">
                         <i class="fas fa-calendar-check"></i>
                         <span>Booking Management</span>
                     </a>
