--- a/booking.html
+++ b/booking.html
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#reports">
+                    <a href="reports.html">
                         <i class="fas fa-chart-bar"></i>
                         <span>Reports</span>
                     </a>
