--- a/staff.html
+++ b/staff.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#rooms">
+                    <a href="rooms.html">
                         <i class="fas fa-bed"></i>
                         <span>Room Management</span>
                     </a>
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#reports">
+                    <a href="reports.html">
                         <i class="fas fa-chart-bar"></i>
                         <span>Reports</span>
                     </a>
