added dark mode

--- a/booking.html
+++ b/booking.html
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#bookings">
+                    <a href="booking.html">
                         <i class="fas fa-calendar-check"></i>
                         <span>Booking Management</span>
                     </a>
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#settings">
+                    <a href="settings.html">
                         <i class="fas fa-cog"></i>
                         <span>Settings</span>
                     </a>
@@ -262,5 +262,6 @@
 
     <script src="booking.js"></script>
     <script src="script.js"></script>
+    <script src="shared.js"></script>
 </body>
 </html>
