--- a/guest.html
+++ b/guest.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#settings">
+                    <a href="settings.html">
                         <i class="fas fa-cog"></i>
                         <span>Settings</span>
                     </a>
@@ -268,5 +268,6 @@
 
     <script src="script.js"></script>
     <script src="guest.js"></script>
+    <script src="shared.js"></script>
 </body>
 </html>
