--- a/reports.html
+++ b/reports.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#settings">
+                    <a href="settings.html">
                         <i class="fas fa-cog"></i>
                         <span>Settings</span>
                     </a>
@@ -222,5 +222,6 @@
 
     <script src="reports.js"></script>
     <script src="script.js"></script>
+    <script src="shared.js"></script>
 </body>
 </html>
