--- a/rooms.html
+++ b/rooms.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#rooms">
+                    <a href="rooms.html">
                         <i class="fas fa-bed"></i>
                         <span>Room Management</span>
                     </a>
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#settings">
+                    <a href="settings.html">
                         <i class="fas fa-cog"></i>
                         <span>Settings</span>
                     </a>
@@ -204,5 +204,6 @@
 
     <script src="script.js"></script>
     <script src="rooms.js"></script>
+    <script src="shared.js"></script>
 </body>
 </html>
