--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#settings">
+                    <a href="settings.html">
                         <i class="fas fa-cog"></i>
                         <span>Settings</span>
                     </a>
@@ -102,6 +102,11 @@
                         <i class="fas fa-envelope"></i>
                         <span class="message-badge">5</span>
                     </div>
+                    <li class="dark-mode-toggle">
+                        <button id="dark-mode-btn" class="dark-mode-btn">
+                            <i class="fas fa-moon"></i>
+                        </button>
+                    </li>
                     <div class="user-nav">
                         <div class="user-dropdown">
                             <div class="user-dropdown-toggle">
@@ -486,5 +491,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
+    <script src="shared.js"></script>
 </body>
 </html>
