--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                         <input type="text" placeholder="Search...">
                     </div>
                 </div>
+                <div class="user-greeting">
+                    <span id="time-greeting"></span>, <span id="username-display"></span>
+                </div>
                 <div class="right-nav">
                     <div class="notifications">
                         <i class="fas fa-bell"></i>
