--- a/booking.html
+++ b/booking.html
@@ -111,8 +111,8 @@
                                 <i class="fas fa-chevron-down"></i>
                             </div>
                             <div class="user-dropdown-menu">
-                                <a href="#profile"><i class="fas fa-user"></i> My Profile</a>
-                                <a href="#settings"><i class="fas fa-cog"></i> Settings</a>
+                                <a href="profile.html"><i class="fas fa-user"></i> My Profile</a>
+                                <a href="profilesettings.html"><i class="fas fa-cog"></i> Settings</a>
                                 <div class="dropdown-divider"></div>
                                 <a href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a>
                             </div>
