--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Management System | Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +14,8 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <div class="logo-container">
-                    <img src="images/HMS LOGO TRANSPARENT.png" alt="Hotel Logo" class="logo">
-                    <h2>Hotel Admin</h2>
+                    <img src="images/LodgiX Logo Transparent.png" alt="Hotel Logo" class="logo">
+                    <h2>LodgiX</h2>
                 </div>
                 <button class="close-sidebar" id="close-sidebar">
                     <i class="fas fa-times"></i>
