--- a/guest.html
+++ b/guest.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Management System | Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="./favicon_io" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon_io" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="guest.css">
 </head>
@@ -14,8 +18,8 @@
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <div class="logo-container">
-                    <img src="images/HMS LOGO TRANSPARENT.png" alt="Hotel Logo" class="logo">
-                    <h2>Hotel Admin</h2>
+                    <img src="images/LodgiX Logo Transparent.png" alt="Hotel Logo" class="logo">
+                    <h2>LodgiX</h2>
                 </div>
                 <button class="close-sidebar" id="close-sidebar">
                     <i class="fas fa-times"></i>
