--- a/login.html
+++ b/login.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Management System | Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="./favicon_io" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon_io" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +16,7 @@
         <div class="auth-card">
             <div class="auth-header">
                 <img src="images/LodgiX Logo Transparent.png" alt="Hotel Logo" class="auth-logo">
-                <h2>Hotel Admin Portal</h2>
+                <h2>LodgiX Admin Portal</h2>
                 <p>Sign in to access your dashboard</p>
             </div>
             
