--- a/signup.html
+++ b/signup.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Management System | Sign Up</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="./favicon_io" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon_io" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <img src="images/HMS LOGO TRANSPARENT.png" alt="Hotel Logo" class="auth-logo">
+                <img src="images/LodgiX Logo Transparent.png" alt="Hotel Logo" class="auth-logo">
                 <h2>Create Your Account</h2>
-                <p>Join our hotel management system</p>
+                <p>Join our LodgiX management system</p>
             </div>
             
             <form id="signupForm" class="auth-form">
